--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Flame.Clr\MemberResolutionTests.cs" />
     <Compile Include="Flame.Clr\NameConversionTests.cs" />
     <Compile Include="Flame.Clr\TypeAttributeTests.cs" />
+    <Compile Include="Flame.Compiler\ArithmeticIntrinsicsTest.cs" />
     <Compile Include="Flame.Ir\AssemblyCodecTest.cs" />
     <Compile Include="Flame.Ir\ConstantCodecTest.cs" />
     <Compile Include="Flame.Ir\PiecewiseCodecTest.cs" />
