Support beq, bgt, blt, bne, bge, ble CIL opcodes plus their unsigned versions

--- a/Flame.Clr/Flame.Clr.csproj
+++ b/Flame.Clr/Flame.Clr.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ClrAssembly.cs" />
     <Compile Include="ClrFieldDefinition.cs" />
     <Compile Include="ClrGenericParameter.cs" />
+    <Compile Include="ClrInstructionSimplifier.cs" />
     <Compile Include="ClrMethodBodyAnalyzer.cs" />
     <Compile Include="ClrMethodDefinition.cs" />
     <Compile Include="ClrMethodSignature.cs" />
