Define a 'SymmetricRelation<T>' collection

--- a/Flame/Flame.csproj
+++ b/Flame/Flame.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Collections\ReadOnlyListExtensions.cs" />
     <Compile Include="Collections\ReadOnlySlice.cs" />
     <Compile Include="Collections\SmallMultiDictionary.cs" />
+    <Compile Include="Collections\SymmetricRelation.cs" />
     <Compile Include="Collections\UniqueNameMap.cs" />
     <Compile Include="Collections\UniqueNameSet.cs" />
     <Compile Include="Collections\ValueList.cs" />
