Create a unit test for SymmetricRelation<T>

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Flame\IntegerConstantTests.cs" />
     <Compile Include="Flame\QualifiedNameTests.cs" />
     <Compile Include="Flame\SmallMultiDictionaryTests.cs" />
+    <Compile Include="Flame\SymmetricRelationTests.cs" />
     <Compile Include="Flame\TestAssemblyContainer.cs" />
     <Compile Include="Flame\TypeConstructionTests.cs" />
     <Compile Include="Flame\TypeResolverTests.cs" />
