--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Flame.Compiler\FlowGraphAnalysisTests.cs" />
     <Compile Include="Flame.Compiler\PredecessorAnalysisTests.cs" />
     <Compile Include="Flame.Compiler\RelatedValueAnalysisTests.cs" />
+    <Compile Include="Flame.Compiler\ValueUseAnalysisTests.cs" />
     <Compile Include="Flame.Ir\AssemblyCodecTest.cs" />
     <Compile Include="Flame.Ir\ConstantCodecTest.cs" />
     <Compile Include="Flame.Ir\PiecewiseCodecTest.cs" />
