Add an interference graph construction test

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Flame.Clr\TypeAttributeTests.cs" />
     <Compile Include="Flame.Compiler\ArithmeticIntrinsicsTests.cs" />
     <Compile Include="Flame.Compiler\FlowGraphAnalysisTests.cs" />
+    <Compile Include="Flame.Compiler\InterferenceGraphAnalysisTests.cs" />
     <Compile Include="Flame.Compiler\LivenessAnalysisTests.cs" />
     <Compile Include="Flame.Compiler\PredecessorAnalysisTests.cs" />
     <Compile Include="Flame.Compiler\RelatedValueAnalysisTests.cs" />
