Create a greedy register allocator

--- a/Flame.Compiler/Flame.Compiler.csproj
+++ b/Flame.Compiler/Flame.Compiler.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Analysis\LivenessAnalysis.cs" />
     <Compile Include="Analysis\MacroAnalysisCache.cs" />
     <Compile Include="Analysis\PredecessorAnalysis.cs" />
+    <Compile Include="Analysis\RegisterAllocation.cs" />
     <Compile Include="Analysis\RelatedValueAnalysis.cs" />
     <Compile Include="Analysis\ValueUseAnalysis.cs" />
     <Compile Include="Flow\JumpFlow.cs" />
