Add CIL round-tripping tests

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Flame\TypeResolverTests.cs" />
     <Compile Include="Flame\ValueListTests.cs" />
     <Compile Include="Flame.Clr\CilAnalysisTests.cs" />
+    <Compile Include="Flame.Clr\CilEmitTests.cs" />
     <Compile Include="Flame.Clr\LocalTypeResolutionTests.cs" />
     <Compile Include="Flame.Clr\MemberResolutionTests.cs" />
     <Compile Include="Flame.Clr\NameConversionTests.cs" />
