Teach the CIL emitter to select some instructions inline

--- a/Flame.Clr/Flame.Clr.csproj
+++ b/Flame.Clr/Flame.Clr.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Analysis\ClrMethodBodyAnalyzer.cs" />
     <Compile Include="Emit\CilCodegenInstruction.cs" />
     <Compile Include="Emit\CilInstructionSelector.cs" />
+    <Compile Include="Emit\CilPeepholeOptimizer.cs" />
     <Compile Include="Emit\CilRegisterAllocator.cs" />
     <Compile Include="Emit\ClrMethodBodyEmitter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
