--- a/Flame/Flame.csproj
+++ b/Flame/Flame.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Collections\ValueList.cs" />
     <Compile Include="Collections\WeakCache.cs" />
     <Compile Include="Constants\BooleanConstant.cs" />
+    <Compile Include="Constants\DefaultConstant.cs" />
     <Compile Include="Constants\Float32Constant.cs" />
     <Compile Include="Constants\Float64Constant.cs" />
     <Compile Include="Constants\IntegerConstant.cs" />
