--- a/Flame.Compiler/Flame.Compiler.csproj
+++ b/Flame.Compiler/Flame.Compiler.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Target\PeepholeOptimizer.cs" />
     <Compile Include="Target\SelectedInstructions.cs" />
     <Compile Include="Transforms\AllocaToRegister.cs" />
+    <Compile Include="Transforms\CopyPropagation.cs" />
     <Compile Include="Transforms\DeadValueElimination.cs" />
     <Compile Include="TypeSystem\DescribedBodyAccessor.cs" />
     <Compile Include="TypeSystem\DescribedBodyMethod.cs" />
