Define and implement a constant propagation transform

--- a/Flame.Compiler/Flame.Compiler.csproj
+++ b/Flame.Compiler/Flame.Compiler.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Target\PeepholeOptimizer.cs" />
     <Compile Include="Target\SelectedInstructions.cs" />
     <Compile Include="Transforms\AllocaToRegister.cs" />
+    <Compile Include="Transforms\ConstantPropagation.cs" />
     <Compile Include="Transforms\CopyPropagation.cs" />
     <Compile Include="Transforms\DeadValueElimination.cs" />
     <Compile Include="Transforms\IntraproceduralOptimization.cs" />
