Create an AssemblyResolver that uses a Mono.Cecil resolver under the hood

--- a/Flame.Clr/Flame.Clr.csproj
+++ b/Flame.Clr/Flame.Clr.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CecilAssemblyResolver.cs" />
     <Compile Include="ClrAccessorDefinition.cs" />
     <Compile Include="ClrArrayType.cs" />
     <Compile Include="ClrAssembly.cs" />
