--- a/Flame.Compiler/Flame.Compiler.csproj
+++ b/Flame.Compiler/Flame.Compiler.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Transforms\CopyPropagation.cs" />
     <Compile Include="Transforms\DeadBlockElimination.cs" />
     <Compile Include="Transforms\DeadValueElimination.cs" />
+    <Compile Include="Transforms\DuplicateReturns.cs" />
     <Compile Include="Transforms\IntraproceduralOptimization.cs" />
     <Compile Include="Transforms\JumpThreading.cs" />
     <Compile Include="Transforms\JumpToEntryRemoval.cs" />
