--- a/FlameMacros/FlameMacros.csproj
+++ b/FlameMacros/FlameMacros.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InstructionPattern.cs" />
+    <Compile Include="MacroApplicationException.cs" />
     <Compile Include="PatternMacros.cs" />
     <Compile Include="RewriteRule.cs" />
   </ItemGroup>
