--- a/FlameMacros/FlameMacros.csproj
+++ b/FlameMacros/FlameMacros.csproj
@@ -55,6 +55,9 @@
     <Reference Include="LeMP.StdMacros">
       <HintPath>..\packages\LeMP.26.4.0\lib\net45\LeMP.StdMacros.dll</HintPath>
     </Reference>
+    <Reference Include="System.Collections.Immutable">
+      <HintPath>..\packages\System.Collections.Immutable.1.5.0\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -62,6 +65,7 @@
     <Compile Include="MacroApplicationException.cs" />
     <Compile Include="PatternMacros.cs" />
     <Compile Include="RewriteRule.cs" />
+    <Compile Include="Trie.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
