--- a/FlameMacros/packages.config
+++ b/FlameMacros/packages.config
@@ -7,4 +7,5 @@
   <package id="Loyc.Math" version="26.4.0" targetFramework="net47" />
   <package id="Loyc.Syntax" version="26.4.0" targetFramework="net47" />
   <package id="Loyc.Utilities" version="26.4.0" targetFramework="net47" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net45" />
 </packages>
