Add macro compilation to build

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ install:
   - make nuget
 
 script:
+  # Compile supporting macros.
+  - make dsl
+
   # Build Flame using csc (Debug)
   - msbuild /p:Configuration=Debug /verbosity:quiet /nologo Flame.sln
 
