--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,8 @@ build_script:
   # Restore NuGet packages.
   - nuget restore Flame.sln
   # Build supporting macros.
+  - msbuild /p:Configuration=Release /verbosity:quiet /nologo FlameMacros/FlameMacros.csproj
+  # Compile macro applications.
   - C:\cygwin\bin\make dsl RUN_EXE=""
   # Build Flame.
   - msbuild /p:Configuration=Release /verbosity:quiet /nologo Flame.sln
