--- a/Flame.Compiler/Flame.Compiler.csproj
+++ b/Flame.Compiler/Flame.Compiler.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Transforms\IntraproceduralOptimization.cs" />
     <Compile Include="Transforms\JumpThreading.cs" />
     <Compile Include="Transforms\JumpToEntryRemoval.cs" />
+    <Compile Include="Transforms\ScalarReplacement.cs" />
     <Compile Include="Transforms\SwitchLowering.cs" />
     <Compile Include="Transforms\SwitchSimplification.cs" />
     <Compile Include="Transforms\TailRecursionElimination.cs" />
