--- a/Flame.Compiler/Flame.Compiler.csproj
+++ b/Flame.Compiler/Flame.Compiler.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Instructions\ConstantPrototype.cs" />
     <Compile Include="Instructions\CopyPrototype.cs" />
     <Compile Include="Instructions\GetFieldPointerPrototype.cs" />
+    <Compile Include="Instructions\GetStaticFieldPointerPrototype.cs" />
     <Compile Include="Instructions\IndirectCallPrototype.cs" />
     <Compile Include="Instructions\IntrinsicNamespace.cs" />
     <Compile Include="Instructions\IntrinsicPrototype.cs" />
