Refactor CIL analysis logic

--- a/Flame.Clr/Flame.Clr.csproj
+++ b/Flame.Clr/Flame.Clr.csproj
@@ -61,6 +61,7 @@
     <Compile Include="NameConversion.cs" />
     <Compile Include="ReferenceResolver.cs" />
     <Compile Include="TypeHelpers.cs" />
+    <Compile Include="Analysis\CilAnalysisContext.cs" />
     <Compile Include="Analysis\ClrInstructionSimplifier.cs" />
     <Compile Include="Analysis\ClrMethodBodyAnalyzer.cs" />
     <Compile Include="Emit\CilCodegenInstruction.cs" />
