--- a/Flame.Compiler/Flame.Compiler.csproj
+++ b/Flame.Compiler/Flame.Compiler.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Instructions\CallPrototype.cs" />
     <Compile Include="Instructions\ConstantPrototype.cs" />
     <Compile Include="Instructions\CopyPrototype.cs" />
+    <Compile Include="Instructions\DynamicCastPrototype.cs" />
     <Compile Include="Instructions\ExceptionIntrinsics.cs" />
     <Compile Include="Instructions\GetFieldPointerPrototype.cs" />
     <Compile Include="Instructions\GetStaticFieldPointerPrototype.cs" />
