Define a base type for subtyping rules

--- a/Flame/Flame.csproj
+++ b/Flame/Flame.csproj
@@ -104,6 +104,7 @@
     <Compile Include="TypeSystem\MethodSpecialization.cs" />
     <Compile Include="TypeSystem\NullAssemblyResolver.cs" />
     <Compile Include="TypeSystem\PointerType.cs" />
+    <Compile Include="TypeSystem\SubtypingRules.cs" />
     <Compile Include="TypeSystem\TypeEnvironment.cs" />
     <Compile Include="TypeSystem\TypeMappingVisitor.cs" />
     <Compile Include="TypeSystem\TypeResolver.cs" />
