--- a/Flame.Clr/Flame.Clr.csproj
+++ b/Flame.Clr/Flame.Clr.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Emit\ClrMethodBodyEmitter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transforms\CanonicalizeDelegates.cs" />
+    <Compile Include="Transforms\LowerDelegates.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Flame\Flame.csproj">
