--- a/Flame.Clr/Flame.Clr.csproj
+++ b/Flame.Clr/Flame.Clr.csproj
@@ -63,6 +63,7 @@
     <Compile Include="ReferenceResolver.cs" />
     <Compile Include="TypeHelpers.cs" />
     <Compile Include="Analysis\CilAnalysisContext.cs" />
+    <Compile Include="Analysis\CilExceptionHandler.cs" />
     <Compile Include="Analysis\ClrInstructionSimplifier.cs" />
     <Compile Include="Analysis\ClrMethodBodyAnalyzer.cs" />
     <Compile Include="Emit\CilCodegenInstruction.cs" />
