--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Flame.Clr\NameConversionTests.cs" />
     <Compile Include="Flame.Clr\TypeAttributeTests.cs" />
     <Compile Include="Flame.Compiler\ArithmeticIntrinsicsTests.cs" />
+    <Compile Include="Flame.Compiler\DominatorTreeAnalysisTests.cs" />
     <Compile Include="Flame.Compiler\FlowGraphAnalysisTests.cs" />
     <Compile Include="Flame.Compiler\InterferenceGraphAnalysisTests.cs" />
     <Compile Include="Flame.Compiler\LivenessAnalysisTests.cs" />
