--- a/Flame.Compiler/Flame.Compiler.csproj
+++ b/Flame.Compiler/Flame.Compiler.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Transforms\DeadBlockElimination.cs" />
     <Compile Include="Transforms\DeadValueElimination.cs" />
     <Compile Include="Transforms\DuplicateReturns.cs" />
+    <Compile Include="Transforms\GlobalValueNumbering.cs" />
     <Compile Include="Transforms\InstructionSimplification.out.cs" />
     <Compile Include="Transforms\IntraproceduralOptimization.cs" />
     <Compile Include="Transforms\JumpThreading.cs" />
