Define fused load-field instruction prototype

--- a/Flame.Compiler/Flame.Compiler.csproj
+++ b/Flame.Compiler/Flame.Compiler.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Instructions\StorePrototype.cs" />
     <Compile Include="Instructions\UnboxPrototype.cs" />
     <Compile Include="Instructions\Fused\FusedInstructionPrototype.cs" />
+    <Compile Include="Instructions\Fused\LoadFieldPrototype.cs" />
     <Compile Include="Pipeline\AssemblyContentDescription.cs" />
     <Compile Include="Pipeline\ITarget.cs" />
     <Compile Include="Pipeline\ITargetAssembly.cs" />
