--- a/Flame.Compiler/Flame.Compiler.csproj
+++ b/Flame.Compiler/Flame.Compiler.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Transforms\DeadBlockElimination.cs" />
     <Compile Include="Transforms\DeadValueElimination.cs" />
     <Compile Include="Transforms\DuplicateReturns.cs" />
+    <Compile Include="Transforms\FuseMemoryAccesses.out.cs" />
     <Compile Include="Transforms\GlobalValueNumbering.cs" />
     <Compile Include="Transforms\InstructionSimplification.out.cs" />
     <Compile Include="Transforms\IntraproceduralOptimization.cs" />
