--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,8 @@ clone_script:
   - cmd: git checkout -qf %APPVEYOR_REPO_COMMIT%
 
 build_script:
+  # Print the path to the C# compiler.
+  - where csc
   # Restore NuGet packages.
   - nuget restore Flame.sln
   # Build supporting macros.
