--- a/Examples/Brainfuck/Brainfuck.csproj
+++ b/Examples/Brainfuck/Brainfuck.csproj
@@ -62,7 +62,7 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BrainfuckIO.cs" />
+    <Compile Include="Dependencies.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Options.cs" />
