Finish most of the Brainfuck compiler

--- a/Examples/Brainfuck/Brainfuck.csproj
+++ b/Examples/Brainfuck/Brainfuck.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Compiler.cs" />
     <Compile Include="Dependencies.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
