--- a/Flame.Compiler/Flame.Compiler.csproj
+++ b/Flame.Compiler/Flame.Compiler.csproj
@@ -51,6 +51,7 @@
     <Compile Include="MethodBody.cs" />
     <Compile Include="SelectedInstruction.cs" />
     <Compile Include="UniqueTag.cs" />
+    <Compile Include="Analysis\AliasAnalysis.cs" />
     <Compile Include="Analysis\BlockReachability.cs" />
     <Compile Include="Analysis\ConstantAnalysis.cs" />
     <Compile Include="Analysis\DefaultAnalyses.cs" />
