Create reassociation pass for associative ops

--- a/Flame.Compiler/Flame.Compiler.csproj
+++ b/Flame.Compiler/Flame.Compiler.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Transforms\JumpThreading.cs" />
     <Compile Include="Transforms\JumpToEntryRemoval.cs" />
     <Compile Include="Transforms\MemoryAccessElimination.cs" />
+    <Compile Include="Transforms\ReassociateOperators.cs" />
     <Compile Include="Transforms\ScalarReplacement.cs" />
     <Compile Include="Transforms\SwitchLowering.cs" />
     <Compile Include="Transforms\SwitchSimplification.cs" />
