Define a base class for InstructionBuilder

--- a/Flame.Compiler/Flame.Compiler.csproj
+++ b/Flame.Compiler/Flame.Compiler.csproj
@@ -49,6 +49,7 @@
     <Compile Include="InstructionBuilder.cs" />
     <Compile Include="InstructionPrototype.cs" />
     <Compile Include="MethodBody.cs" />
+    <Compile Include="MutableInstructionRef.cs" />
     <Compile Include="SelectedInstruction.cs" />
     <Compile Include="UniqueTag.cs" />
     <Compile Include="Analysis\AliasAnalysis.cs" />
