--- a/Flame.Compiler/Flame.Compiler.csproj
+++ b/Flame.Compiler/Flame.Compiler.csproj
@@ -46,11 +46,11 @@
     <Compile Include="IBodyMethod.cs" />
     <Compile Include="Instruction.Create.cs" />
     <Compile Include="Instruction.cs" />
-    <Compile Include="InstructionBuilder.cs" />
     <Compile Include="InstructionPrototype.cs" />
     <Compile Include="InstructionRef.cs" />
     <Compile Include="MethodBody.cs" />
     <Compile Include="NamedInstruction.cs" />
+    <Compile Include="NamedInstructionBuilder.cs" />
     <Compile Include="UniqueTag.cs" />
     <Compile Include="Analysis\AliasAnalysis.cs" />
     <Compile Include="Analysis\BlockReachability.cs" />
